# cmake_demo

./: readme.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/: .CMakeLists.txt.swp  CMakeLists.txt
t4/src/: .CMakeLists.txt.swp  CMakeLists.txt
