PROJECT(HELLO)

SET(CMAKE_INSTALL_PREFIX /tmp/t2/usr)
MESSAGE(STATUS "PROJECT NAME:" ${PROJECT_NAME})
MESSAGE(STATUS "CMAKE INSTALL PREFIX:" ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "CMAKE CURRENT SOURCE DIR:" ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE CURRENT BUILD DIR:" ${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(src ${PROJECT_SOURCE_DIR}/bin)

INSTALL (FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL (PROGRAMS runhello.sh DESTINATION bin)
INSTALL (DIRECTORY doc/ DESTINATION share/doc/cmake/t2)

