SET(INCLUDE_PATH ~/workspace/cmake_examples/t3/lib)
SET(LIB_DIR ~/workspace/cmake_examples/t3/bin)

OPTION(TEST "THIS IS OPTION TEST" ON)
MESSAGE(STATUS "HELLO_INCLUDE DIR: " ${INCLUDE_PATH})
MESSAGE(STATUS "HELLO_LIB DIR: " ${LIB_DIR})

IF(TEST)
   MESSAGE(STATUS "OPTION TEST IS ON!!!")
ENDIF(TEST)

INCLUDE_DIRECTORIES(${INCLUDE_PATH})
LINK_DIRECTORIES(${LIB_DIR})

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main libhello.a)

